--- a/news/static/news/css/news.css
+++ b/news/static/news/css/news.css
@@ -27,6 +27,10 @@ header>.container>.row, footer>.container>.row {
 .enter>a:hover {
     border: 1px solid hsla(0,0%,100%,1);
 }
+.enter .selected {
+    color: #a3daa5;
+    border: 1px solid rgba(163,218,165,.5);
+}
 .single_news {
     margin-top: 20px;
     padding: 20px;
@@ -44,10 +48,10 @@ form {
     border-radius: 4px;
     box-shadow: 0 2px 12px #edeff0;
 }
-.register_form label {
+.visual_form label {
     display: block;
 }
-.register_form input, .register_form select {
+.visual_form input, .visual_form select, .visual_form textarea {
     display: block;
     width: 100%;
     padding: 0.375rem 0.75rem;
@@ -61,10 +65,10 @@ form {
     border-radius: 0.25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
-.register_form p {
+.visual_form p {
     margin-bottom: 0.5rem;
 }
-.register_form .helptext {
+.visual_form .helptext {
     display: block;
     font-size: 12px;
     color: #777;
