--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -19,7 +19,9 @@
                     <div class="col-4">
                         <div class="enter">
                             {% if request.user.is_authenticated %}
-                                <a href="{% url 'portal:logout' %}">Выйти</a>
+                            <a href="{% url 'portal:dashboard' %}" {% if section == "dashboard" %} class="selected"{% endif %}>Рабочий стол</a>
+                            <a href="{% url 'portal:private' %}" {% if section == "private" %} class="selected"{% endif %}>Личный кабинет</a>
+                            <a href="{% url 'portal:logout' %}">Выйти</a>
                             {% else %}
                                 <a href="{% url 'portal:login' %}">Войти</a>
                             {% endif %}
@@ -29,6 +31,7 @@
             </div>
         </header>
         <main>
+            {% include 'portal/account/includes/messages.html' %}
             {% block content %} {% endblock %}
         </main>
         <footer>
@@ -45,6 +48,8 @@
                 </div>
             </div>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
