--- a/portal/templates/portal/account/dashboard.html
+++ b/portal/templates/portal/account/dashboard.html
@@ -1,18 +1,18 @@
 {% extends "news/base.html" %}
-{% block title %} Личный кабинет {% endblock %}
+{% block title %} Рабочий стол {% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1 class="text-center">Личный кабинет</h1>
-            <p class="text-center">Добро пожаловать в личный кабинет</p>
+
+            <h1 class="text-center mb-3">Рабочий стол</h1>
         </div>
     </div>
     <div class="row">
         <div class="col-3">
             <div class="left-menu">
 
-                    {% include 'portal/account/includes/worker_dashboard_menu.html' %}
+                    {% include 'portal/account/includes/dashboard_menu.html' %}
 
             </div>
         </div>
