Add CRUD for vacancy and a little bit more

--- a/portal/templates/portal/account/includes/dashboard_menu.html
+++ b/portal/templates/portal/account/includes/dashboard_menu.html
@@ -1,5 +1,11 @@
 <h4>Мои события</h4>
 <div class="list-group">
     <a href="#" class="list-group-item list-group-item-action">Отклики и приглашения</a>
+    {% if perms.portal.change_profile %}
+    <a href="#" class="list-group-item list-group-item-action">Мои резюме</a>
     <a href="#" class="list-group-item list-group-item-action">Избранные вакансии</a>
+    {% else %}
+    <a href="{% url 'portal:my_vacancies' %}" class="list-group-item list-group-item-action">Мои вакансии</a>
+    <a href="#" class="list-group-item list-group-item-action">Избранные резюме</a>
+    {% endif %}
 </div>
