--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -16,8 +16,8 @@
                             <a href="/"><img src="{% static 'news/img/logo.png' %}" alt=""></a>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div class="enter">
+                    <div class="col-6">
+                        <div class="enter text-end">
                             {% if request.user.is_authenticated %}
                             <a href="{% url 'portal:dashboard' %}" {% if section == "dashboard" %} class="selected"{% endif %}>Рабочий стол</a>
                             <a href="{% url 'portal:private' %}" {% if section == "private" %} class="selected"{% endif %}>Личный кабинет</a>
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <h4>2022. AlmostHH</h4>
+                        <h6>{% now 'Y' %}. AlmostHH</h6>
                     </div>
                 </div>
             </div>
