--- a/news/static/news/css/news.css
+++ b/news/static/news/css/news.css
@@ -74,3 +74,9 @@ form {
     font-size: 12px;
     color: #777;
 }
+.work_exp__item {
+    display:flex;
+}
+.work_exp__descr {
+    margin-left: 40px;
+}
