add buttons to send vac/resume to admin for check

--- a/portal/templates/portal/account/edit_resume.html
+++ b/portal/templates/portal/account/edit_resume.html
@@ -40,8 +40,10 @@
                 {% endfor %}
                 {% endif %}
             </div>
-
-                <button type="submit" class="btn btn-outline-primary mt-3">Сохранить</button>
+                <div class="form-buttons mt-3">
+                    <button type="submit" class="btn btn-outline-primary" name="save">Сохранить</button>
+                    <button type="submit" class="btn btn-outline-primary" name="moderate">Отправить на модерацию</button>
+                </div>
             </form>
         </div>
     </div>
