--- a/portal/templates/portal/account/add_vacancy.html
+++ b/portal/templates/portal/account/add_vacancy.html
@@ -22,7 +22,10 @@
             <form action="." method="post" class="add_vacancy visual_form">
                 {{ vacancy_form.as_p }}
                 {% csrf_token %}
-                <button type="submit" class="btn btn-outline-primary">Сохранить</button>
+                <div class="form-buttons">
+                    <button type="submit" class="btn btn-outline-primary" name="save">Сохранить</button>
+                    <button type="submit" class="btn btn-outline-primary" name="moderate">Отправить на модерацию</button>
+                </div>
             </form>
         </div>
     </div>
