--- a/portal/templates/portal/account/dashboard.html
+++ b/portal/templates/portal/account/dashboard.html
@@ -4,8 +4,11 @@
 <div class="container">
     <div class="row">
         <div class="col">
-
-            <h1 class="text-center mb-3">Рабочий стол</h1>
+            {% if perms.portal.add_resume %}
+            <h1 class="text-center mb-3">Перечень вакансий</h1>
+            {% else %}
+            <h1 class="text-center mb-3">Перечень резюме</h1>
+            {% endif %}
         </div>
     </div>
     <div class="row">
@@ -17,8 +20,33 @@
             </div>
         </div>
         <div class="col-9">
-            <div class="vacancies">
-
+            <div class="row">
+                {% if perms.portal.add_resume %}
+                {% if vacancies %}
+                <div class="vacancies">
+                    {% for vac in vacancies %}
+                    <div class="vac-item">
+                        <p class="item_title"><a href="{% url 'portal:vacancy_detail' vac.id %}">{{ vac.title }}</a></p>
+                        <p class="item_salary">{{ vac.salary }}</p>
+                        <p class="item_comp_title">{{ vac.company.title }}</p>
+                        <p class="item_comp_title">{{ vac.address }}</p>
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endif %}
+                {% endif %}
+                {% if perms.portal.add_vacancy %}
+                {% if resumes %}
+                <div class="resumes">
+                    {% for res in resumes %}
+                    <div class="res-item">
+                        <p class="item_title"><a href="{% url 'portal:resume_detail' res.id %}">{{ res.title }}</a></p>
+                        <p class="item_salary">{{ res.salary }}</p>
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endif %}
+                {% endif %}
             </div>
         </div>
     </div>
