--- a/portal/templates/portal/account/edit_vacancy.html
+++ b/portal/templates/portal/account/edit_vacancy.html
@@ -19,6 +19,9 @@
         </div>
         <div class="col-5 text-center">
             <p class="text-center">Используйте следующую форму для изменения вакансии:</p>
+            {% if comment %}
+            <p class="alert alert-danger">{{ comment }}</p>
+            {% endif %}
             <form action="." method="post" class="edit_vacancy visual_form">
                 {{ vacancy_form.as_p }}
                 {% csrf_token %}
