--- a/portal/templates/portal/account/find_resume.html
+++ b/portal/templates/portal/account/find_resume.html
@@ -5,6 +5,10 @@
     <div class="row">
         <div class="col">
             <h1 class="text-center mb-3">Поиск резюме</h1>
+            <form method="get">
+              <input name="q" type="text" placeholder="Поиск...">
+              <button type="submit">Найти</button>
+            </form>
         </div>
     </div>
 </div>
