--- a/portal/templates/portal/account/find_job.html
+++ b/portal/templates/portal/account/find_job.html
@@ -4,8 +4,11 @@
 <div class="container">
     <div class="row">
         <div class="col">
-
             <h1 class="text-center mb-3">Поиск вакансий</h1>
+            <form method="get">
+              <input name="q" type="text" placeholder="Поиск...">
+              <button type="submit">Найти</button>
+            </form>
         </div>
     </div>
 {% for s_job in job %}
