небольшие изменения, с опытом работы пока не особо работает

--- a/portal/templates/portal/account/add_vacancy.html
+++ b/portal/templates/portal/account/add_vacancy.html
@@ -17,7 +17,7 @@
 
             </div>
         </div>
-        <div class="col-5 text-center">
+        <div class="col-9">
             <p class="text-center">Используйте следующую форму для добавления вакансии:</p>
             <form action="." method="post" class="add_vacancy visual_form">
                 {{ vacancy_form.as_p }}
