--- a/portal/templates/portal/account/edit_vacancy.html
+++ b/portal/templates/portal/account/edit_vacancy.html
@@ -17,7 +17,7 @@
 
             </div>
         </div>
-        <div class="col-5 text-center">
+        <div class="col-9">
             <p class="text-center">Используйте следующую форму для изменения вакансии:</p>
             {% if comment %}
             <p class="alert alert-danger">{{ comment }}</p>
