--- a/portal/templates/portal/account/add_resume.html
+++ b/portal/templates/portal/account/add_resume.html
@@ -22,24 +22,13 @@
             <form action="." method="post" class="add_resume visual_form">
                 {% csrf_token %}
                 {{ resume_form.as_p }}
-                <div class="work_exp">
-                    <h4>Опыт работы</h4>
-                    <a href="{% url 'portal:add_experience' %}" class="btn btn-primary">Добавить опыт</a>
-                    {% if experiences %}
-                    {% for exp in experiences %}
-                    <div class="work_exp__item">
-                        <div class="work_exp__date">
-                            {{ exp.finish }} - {{ exp.start }}
-                        </div>
-                        <div class="work_exp__descr">
-                            <p class="mb-3"><strong>{{ exp.organisation_name }}</strong></p>
-                            <p><strong>{{ exp.position }}</strong></p>
-                            <p>{{ exp.function }}</p>
-                        </div>
+                <div class="exp-formset">
+                   {{ exp_formset.management_form }}
+                    {% for form in exp_formset %}
+                    <div class="exp-formset-item">
+                        {{ form }}
                     </div>
-                    <hr>
                     {% endfor %}
-                    {% endif %}
                 </div>
                 <div class="form-buttons mt-3">
                     <button type="submit" class="btn btn-outline-primary" name="save">Сохранить</button>
