--- a/portal/templates/portal/account/edit_profile.html
+++ b/portal/templates/portal/account/edit_profile.html
@@ -3,7 +3,14 @@
 {% block content %}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-4">
+        <div class="col-3">
+            <div class="left-menu">
+
+                    {% include 'portal/account/includes/dashboard_menu.html' %}
+
+            </div>
+        </div>
+        <div class="col-9">
             <p class="text-center">Используйте следующую форму для
                 редактирования профиля:
             </p>
