--- a/portal/templates/portal/account/includes/dashboard_menu.html
+++ b/portal/templates/portal/account/includes/dashboard_menu.html
@@ -1,11 +1,11 @@
 <h4>Мои события</h4>
 <div class="list-group">
-    <a href="{% url 'portal:feedback_list' %}" class="list-group-item list-group-item-action">Отклики и приглашения</a>
+    <a href="{% url 'portal:feedback_list' %}" class="list-group-item list-group-item-action {% if left_menu == 'feed' %} active {% endif %}">Отклики и приглашения</a>
     {% if perms.portal.change_profile %}
-    <a href="{% url 'portal:my_resumes' %}" class="list-group-item list-group-item-action">Мои резюме</a>
-    <a href="{% url 'favorites:favorites_list' %}" class="list-group-item list-group-item-action">Избранные вакансии</a>
+    <a href="{% url 'portal:my_resumes' %}" class="list-group-item list-group-item-action {% if left_menu == 'my_resumes' %} active {% endif %}">Мои резюме</a>
+    <a href="{% url 'favorites:favorites_list' %}" class="list-group-item list-group-item-action {% if left_menu == 'favs' %} active {% endif %}">Избранные вакансии</a>
     {% else %}
-    <a href="{% url 'portal:my_vacancies' %}" class="list-group-item list-group-item-action">Мои вакансии</a>
-    <a href="{% url 'favorites:favorites_list' %}" class="list-group-item list-group-item-action">Избранные резюме</a>
+    <a href="{% url 'portal:my_vacancies' %}" class="list-group-item list-group-item-action {% if left_menu == 'my_vacs' %} active {% endif %}">Мои вакансии</a>
+    <a href="{% url 'favorites:favorites_list' %}" class="list-group-item list-group-item-action {% if left_menu == 'favs' %} active {% endif %}">Избранные резюме</a>
     {% endif %}
 </div>
