добавлено прилож django-tinymce , обнов формы, вьюхи, requirements

--- a/portal/templates/portal/account/edit_resume.html
+++ b/portal/templates/portal/account/edit_resume.html
@@ -1,5 +1,6 @@
 {% extends "news/base.html" %}
 {% block title %} Редактирование резюме {% endblock %}
+{% block extra_head %} {{ resume_form.media }} {% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
