--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -9,6 +9,7 @@
         <!-- Fengyuan Chen's Datepicker -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
         <link rel="stylesheet" href="{% static 'news/css/news.css' %}">
+        {% block extra_head %} {% endblock %}
     </head>
     <body>
         <header>
