--- a/portal/templates/portal/account/add_vacancy.html
+++ b/portal/templates/portal/account/add_vacancy.html
@@ -1,5 +1,6 @@
 {% extends "news/base.html" %}
 {% block title %} Добавление вакансии {% endblock %}
+{% block extra_head %} {{ vacancy_form.media }} {% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
