--- a/news/templates/news/pagination.html
+++ b/news/templates/news/pagination.html
@@ -1,20 +1,20 @@
 <nav aria-label="Page navigation">
   <ul class="pagination justify-content-center">
-      {% if page.has_previous %}
-    <li class="page-item">
-      <a class="page-link" href="?page={{page.previous_page_number}}" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-      </a>
-    </li>
+      {% if page_obj.has_previous %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
       {% endif %}
       <li class="page-item">
-      <a class="page-link" href="?page={{ page.number }}" aria-label="Current">
-        <span aria-hidden="true">{{ page.number }}</span>
+      <a class="page-link" href="?page={{ page_obj.number }}" aria-label="Current">
+        <span aria-hidden="true">{{ page_obj.number }}</span>
       </a>
     </li>
-      {% if page.has_next %}
+      {% if page_obj.has_next %}
     <li class="page-item">
-      <a class="page-link" href="?page={{ page.next_page_number }}" aria-label="Next">
+      <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
       </a>
     </li>
