--- a/news/static/news/new/css/flaticon.css
+++ b/news/static/news/new/css/flaticon.css
@@ -5,12 +5,12 @@
 
 @font-face {
   font-family: "Flaticon";
-  src: url("../fonts/Flaticon.eot");
-  src: url("../fonts/Flaticon.eot?#iefix") format("embedded-opentype"),
-       url("../fonts/Flaticon.woff2") format("woff2"),
-       url("../fonts/Flaticon.woff") format("woff"),
-       url("../fonts/Flaticon.ttf") format("truetype"),
-       url("../fonts/Flaticon.svg#Flaticon") format("svg");
+  src: url("/static/news/new/fonts/Flaticon.eot");
+  src: url("/static/news/new/fonts/Flaticon.eot?#iefix") format("embedded-opentype"),
+       url("/static/news/new/fonts/Flaticon.woff2") format("woff2"),
+       url("/static/news/new/fonts/Flaticon.woff") format("woff"),
+       url("/static/news/new/fonts/Flaticon.ttf") format("truetype"),
+       url("/static/news/new/fonts/Flaticon.svg#Flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
