--- a/news/static/news/new/css/themify-icons.css
+++ b/news/static/news/new/css/themify-icons.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'themify';
-	src:url('../fonts/themify.eot?-fvbane');
-	src:url('../fonts/themify.eot?#iefix-fvbane') format('embedded-opentype'),
-		url('../fonts/themify.woff?-fvbane') format('woff'),
-		url('../fonts/themify.ttf?-fvbane') format('truetype'),
-		url('../fonts/themify.svg?-fvbane#themify') format('svg');
+	src:url('/static/news/new/fonts/themify.eot?-fvbane');
+	src:url('/static/news/new/fonts/themify.eot?#iefix-fvbane') format('embedded-opentype'),
+		url('/static/news/new/fonts/themify.woff?-fvbane') format('woff'),
+		url('/static/news/new/fonts/themify.ttf?-fvbane') format('truetype'),
+		url('/static/news/new/fonts/themify.svg?-fvbane#themify') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
