--- a/news/templates/news/news/detail.html
+++ b/news/templates/news/news/detail.html
@@ -17,7 +17,7 @@
             <h1>{{ news.title }}</h1>
             <p class="date"><small class="text-muted">{{ news.publish }}</small></p>
             <hr>
-            <p class="content">{{ news.body | linebreaks }}</p>
+            <p class="content">{{ news.body | safe | linebreaks }}</p>
         </div>
     </div>
 </div>
